[gd_scene load_steps=5 format=1]

[ext_resource path="res://Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/KitMenu.gd" type="Script" id=2]
[ext_resource path="res://Objects/ColorPicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=4]

[node name="KitMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
script/script = ExtResource( 2 )

[node name="KitTabContainer" type="TabContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 550.0
margin/top = 150.0
margin/right = 1370.0
margin/bottom = 720.0
tab_align = 0
tabs_visible = true

[node name="Name" type="Tabs" parent="KitTabContainer"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="LineEdit" type="LineEdit" parent="KitTabContainer/Name"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 35.0
margin/right = -300.0
margin/bottom = -35.0
text = "My Team"
placeholder/text = "Team Name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = true
caret/caret_blink_speed = 0.65

[node name="Test" type="Label" parent="KitTabContainer/Name"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 60.0
text = "My Team"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Shirt" type="Tabs" parent="KitTabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="ColorPicker" parent="KitTabContainer/Shirt" instance=ExtResource( 3 )]

[node name="Shorts" type="Tabs" parent="KitTabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="ColorPicker" parent="KitTabContainer/Shorts" instance=ExtResource( 3 )]

[node name="Shoes" type="Tabs" parent="KitTabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="ColorPicker" parent="KitTabContainer/Shoes" instance=ExtResource( 3 )]

[node name="CancelButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 550.0
margin/top = 750.0
margin/right = 950.0
margin/bottom = 820.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Cancel"
flat = false

[node name="DoneButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 966.0
margin/top = 750.0
margin/right = 1366.0
margin/bottom = 820.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Done"
flat = false

[node name="Player" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 450, 784 )
collision/layers = 0
collision/mask = 0

[node name="Title" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 50.0
margin/right = -200.0
margin/bottom = 110.0
text = "Edit Team"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="text_changed" from="KitTabContainer/Name/LineEdit" to="." method="nameChanged"]

[connection signal="color_changed" from="KitTabContainer/Shirt/ColorPicker" to="." method="shirtColorChanged"]

[connection signal="color_changed" from="KitTabContainer/Shorts/ColorPicker" to="." method="shortsColorChanged"]

[connection signal="color_changed" from="KitTabContainer/Shoes/ColorPicker" to="." method="shoesColorChanged"]

[connection signal="pressed" from="CancelButton" to="." method="cancelButtonPressed"]

[connection signal="pressed" from="DoneButton" to="." method="doneButtonPressed"]


